--- a/octoprint_LightControls/templates/lightcontrols.jinja2
+++ b/octoprint_LightControls/templates/lightcontrols.jinja2
@@ -3,7 +3,8 @@
     <h1>Lights</h1>
     <div data-bind="foreach: lights">
       <div class="slidecontainer control-box">
-        <input type="range" min="0" max="100" value="0" class="slider" data-bind="value: light_val, valueUpdate: 'input', text: name">
+        <span data-bind="text: name"></span>
+        <input type="range" min="0" max="100" value="0" class="slider" data-bind="value: light_val, valueUpdate: 'input'">
       </div>
     </div>
 </div>
