Add Hardware PWM info to settings menu

--- a/octoprint_LightControls/templates/lightcontrols_settings.jinja2
+++ b/octoprint_LightControls/templates/lightcontrols_settings.jinja2
@@ -1,8 +1,12 @@
 <!-- ko allowBindings: true -->
 <form id="settings_plugin_lightcontrols_form" class="form-horizontal">
     <h2>{{ _('Light Controls') }}</h3>
-    <span>Note: The GPIO field uses GPIO numbers, not header pin numbers!</span></br>
-    <a href="https://pinout.xyz/"><span>To convert between the two, check pinout.xyz</span></a>
+    <div class="alert alert-info">Note: The GPIO field uses GPIO numbers, not header pin numbers!</span></br>
+    <a href="https://pinout.xyz/"><span>To convert between the two, check pinout.xyz</span></a></div>
+    <div class="alert alert-info">PWM by default wil use Soft PWM that may cause lights to flicker.</br>
+        To avoid flickering, Hardware PWM can be used by selecting Hardware PWM enabled pins <i class="icon icon-info-sign" title="The Pi has 2 PWM channels. GPIO 18 or 12 can be used for PWM0, GPIO 19 or 13 can be used for PWM1." data-toggle="tooltip"></i>.<br>
+        Additional configuration is required to enable Hardware PWM. See <a href="https://github.com/Pioreactor/rpi_hardware_pwm" target="_blank">rpi_hardware_pwm</a> for more information.</br>
+        A restart of Octoprint is required before enabling Hardware PWM goes into effect!</div>
     <div class="row-fluid">
         <div class="span3 text-center"><h4>{{ _('Name') }}</h4></div>
         <div class="span1 text-center"><h4>{{ _('GPIO') }}</h4></div>
